--- a/tindex.html
+++ b/tindex.html
@@ -28,7 +28,7 @@
             </div>
             <div class="rightbox">
             <div class="logo2">
-            <img src="/Users/regupathyb/Desktop/css/trip/internet-connection.png"></div>
+            <img src="images/internet-connection.png"></div>
             <p>| INR</p>
 
             <a href="#" class="btnsignin"> Sign In</a>
@@ -70,19 +70,19 @@
         <p>2025’s Travellers’ Choice Awards Best of the Best Restaurants</p>
         <div class="best__container">
             <div class="course-card">
-                <img src="dine1.jpeg">
+                <img src="images/dine1.jpeg">
                 <h4 class="dine">Fine Dining</h4>
                 </div>
                 <div class="course-card">
-                <img src="dine2.jpeg">
+                <img src="images/dine2.jpeg">
                 <h4 class="dine">Hidden Gems</h4>
                 </div>
                 <div class="course-card">
-                <img src="dine3.jpeg">
+                <img src="images/dine3.jpeg">
                 <h4 class="dine">Casual Dining</h4>
                 </div>
                 <div class="course-card">
-                <img src="dine4.jpeg">
+                <img src="images/dine4.jpeg">
                 <h4 class="dine">Vegan & Vegetarian</h4>
                 </div>
                 </div>
@@ -97,25 +97,25 @@
         <p>Can’t-miss picks near you</p>
         <div class="explore__container">
                 <div class="course-card">
-                <img src="tour2.jpeg">
+                <img src="images/tour2.jpeg">
                 <h4>The Dubai Fountain</h4>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour3.jpeg">
+                <img src="images/tour3.jpeg">
                 <h4>Palm Island</h4>
                 <p>4.9 ⭐⭐⭐⭐(1345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour11.jpeg">
+                <img src="images/tour11.jpeg">
                 <h4>Explore Allapey's famed backwaters</h4>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour6.jpeg">
+                <img src="images/tour6.jpeg">
                 <h4>More from thrilling Thailand—Golden Phuket</h4>
                 <p>3.9 ⭐⭐⭐(2465)</p>
                 <p>from 5000rs per adult</p>
@@ -130,19 +130,19 @@
         <p>Inspiration to get you going</p>
         <div class="inspiration__container">
             <div class="course-card">
-                <img src="tour10.jpeg">
+                <img src="images/tour10.jpeg">
                 <h4>You go to guide for fall travel</h4>
                 </div>
                 <div class="course-card">
-                <img src="tour14.jpeg">
+                <img src="images/tour14.jpeg">
                 <h4>Most lucrative tourist's attractionsBest of Dubai</h4>
                 </div>
                 <div class="course-card">
-                <img src="tour4.jpeg">
+                <img src="images/tour4.jpeg">
                 <h4>Best of Dubai</h4>
                 </div>
                 <div class="course-card">
-                <img src="tour13.jpeg">
+                <img src="images/tour13.jpeg">
                 <h4>Best historical places in the world</h4>
                 </div>
                 </div>
@@ -153,25 +153,25 @@
         <p>Things to do right now</p>
         <div class="things__container">
                 <div class="course-card">
-                <img src="tour5.jpeg">
+                <img src="images/tour5.jpeg">
                 <h2>Dubai Miracle Garden</h2>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour7.jpeg">
+                <img src="images/tour7.jpeg">
                 <h2>The Dubai Fountain</h2>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour8.jpeg">
+                <img src="images/tour8.jpeg">
                 <h2>Dubai Miracle Garden</h2>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
                 </div>
                 <div class="course-card">
-                <img src="tour9.jpeg">
+                <img src="images/tour9.jpeg">
                 <h2>The Dubai Fountain</h2>
                 <p>4.9 ⭐⭐⭐⭐(2345)</p>
                 <p>from 2351rs per adult</p>
@@ -183,25 +183,25 @@
         <h3>Weekend getaways from Abudhabi</h3>
         <div class="nexttrip__container">
             <div class="course-card">
-                <img src="tour10.jpeg">
+                <img src="images/tour10.jpeg">
                 <div class="next">
                 <h4>You go to guide for fall travel</h4>
                 </div>
                 </div>
                 <div class="course-card">
-                <img src="tour13.jpeg">
+                <img src="images/tour13.jpeg">
                 <div class="next">
                 <h4>Most lucrative tourist's attractions</h4>
                 </div>
                 </div>
                 <div class="course-card">
-                <img src="tour3.jpeg">
+                <img src="images/tour3.jpeg">
                 <div class="next">
                 <h4>Best of Dubai</h4>
                 </div>
                 </div>
                 <div class="course-card">
-                <img src="tour14.jpeg">
+                <img src="images/tour14.jpeg">
                 <div class="next">
                 <h4>Best historical places in the world</h4>
                 </div>
@@ -211,7 +211,7 @@
 </div>
 <!--places image-->
     <div class="place2-image">
-        <img src="tourplace.jpeg">
+        <img src="images/tourplace.jpeg">
         <div class="place2-image-2025">
             <h1>Travellers' Choice Awards Best of the Best</h1>
             <h5>Among our top 1% of places, stays, eats, and experiences—decided by you.</h5>
